<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Looking Busy</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="title_activity_fully_screen">fullyScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_looking_busy">Looking Busy</string>
    <string name="gameplay_type">Gameplay Type</string>
    <string name="sweets_theme">Sweets Theme</string>
    <string name="crayon_theme">Crayon Theme</string>
    <string name="theme">Theme</string>
    <string name="look_and_feel_long">Game Play and Theme Options</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="gameplay_type_long">Type of gameplay experience, relaxed or fast-paced</string>
    <string name="game_theme">Theme</string>
    <string name="game_theme_long">Theme of the game pieces</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="challenging_mode">Challenging Mode</string>
    <string name="relaxing_mode">Relaxing Mode</string>
    <string name="high_score">High Score!!</string>
</resources>
